[gd_scene load_steps=17 format=3]

[ext_resource type="Script" path="res://main_scene.gd" id="1_arkwm"]
[ext_resource type="PackedScene" path="res://player.tscn" id="2_oc5gw"]
[ext_resource type="Script" path="res://player.gd" id="3_wuooh"]
[ext_resource type="PackedScene" path="res://lighting.tscn" id="4_141ti"]
[ext_resource type="PackedScene" path="res://scholar/scholar.tscn" id="5_k2wwh"]
[ext_resource type="PackedScene" path="res://Fossilroom/fossil_room.tscn" id="6_j6e0b"]
[ext_resource type="PackedScene" path="res://physics_manager.tscn" id="7_hipc6"]
[ext_resource type="Script" path="res://physics_manager.gd" id="8_50r0p"]
[ext_resource type="PackedScene" path="res://models/junction1/junction_1.tscn" id="9_es3k5"]
[ext_resource type="PackedScene" path="res://models/lobby/lobby.tscn" id="10_x3e43"]
[ext_resource type="Texture2D" path="res://teardrop.png" id="11_ssgoo"]
[ext_resource type="Script" path="res://sub_viewport_container.gd" id="12_ttqoh"]
[ext_resource type="Script" path="res://pause_menu.gd" id="13_gol5d"]
[ext_resource type="PackedScene" path="res://models/eddy/eddy.tscn" id="14_3oyuu"]
[ext_resource type="PackedScene" path="res://ancient_greece_2.tscn" id="15_n4kk3"]
[ext_resource type="AudioStream" path="res://ESCAPE BOUNCE 4_22_25.mp3" id="16_e56e4"]

[node name="Scene" type="Node3D"]
script = ExtResource("1_arkwm")

[node name="Player" type="Node3D" parent="." instance=ExtResource("2_oc5gw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.5979, 10.3929, -3.45267)
script = ExtResource("3_wuooh")

[node name="Lighting" type="Node3D" parent="." instance=ExtResource("4_141ti")]

[node name="Scholar" type="Node3D" parent="." instance=ExtResource("5_k2wwh")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -16, -2, -30)

[node name="FossilRoom" type="Node3D" parent="." instance=ExtResource("6_j6e0b")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36.4611, -76.7223, 114.219)

[node name="PhysicsManager" type="Node3D" parent="." instance=ExtResource("7_hipc6")]
script = ExtResource("8_50r0p")

[node name="junction1" type="Node3D" parent="." instance=ExtResource("9_es3k5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8, 0, -79)

[node name="lobby" type="Node3D" parent="." instance=ExtResource("10_x3e43")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 54, 0, 51)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -348.0
offset_top = -200.0
offset_right = 164.0
offset_bottom = 312.0
grow_horizontal = 0
rotation = -2.804
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(256, 300)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("11_ssgoo")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("12_ttqoh")

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 30.5979, 81.6331, -3.45267)
cull_mask = 1048573
projection = 1
current = true
size = 100.0

[node name="MarginContainer" type="MarginContainer" parent="SubViewportContainer"]
layout_mode = 2

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 2
script = ExtResource("13_gol5d")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 0.462745)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -64.0
offset_right = 36.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PauseLabelContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="PausedLabel" type="Label" parent="PauseMenu/VBoxContainer/PauseLabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "PAUSED"

[node name="Control" type="Control" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="ResumeButtonContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer/ResumeButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "RESUME"

[node name="SaveButtonContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="PauseMenu/VBoxContainer/SaveButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
button_pressed = true
text = "SAVE"

[node name="QuitButtonContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer/QuitButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "QUIT"

[node name="LoadButtonContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="PauseMenu/VBoxContainer/LoadButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "LOAD"

[node name="Eddy" type="Node3D" parent="." instance=ExtResource("14_3oyuu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45, 17, -12)

[node name="ancientGreece2" type="Node3D" parent="." instance=ExtResource("15_n4kk3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 92.9625, 0.0105002, -83.5291)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_e56e4")
volume_db = -6.0
autoplay = true
stream_paused = true
parameters/looping = true

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButtonContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/SaveButtonContainer/SaveButton" to="PauseMenu" method="_on_save_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButtonContainer/QuitButton" to="PauseMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/LoadButtonContainer/LoadButton" to="PauseMenu" method="_on_load_button_pressed"]
