[gd_scene load_steps=11 format=3 uid="uid://d3m1n07whd2tc"]

[ext_resource type="Script" path="res://controller.gd" id="1_ijpxa"]
[ext_resource type="Script" path="res://player.gd" id="1_uporl"]
[ext_resource type="PackedScene" uid="uid://l8vhaettc2ns" path="res://vr_base.tscn" id="3_atccx"]
[ext_resource type="PackedScene" uid="uid://up4obg4jo3ve" path="res://player_input_controller.tscn" id="3_sst4p"]
[ext_resource type="Script" path="res://grab_controller.gd" id="5_78jx3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_c7cox"]
size = Vector3(4, 16, 4)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fn3tq"]
friction = 0.0

[sub_resource type="BoxShape3D" id="BoxShape3D_krclw"]
size = Vector3(3, 3, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pbx5g"]

[sub_resource type="BoxMesh" id="BoxMesh_nnjws"]
material = SubResource("StandardMaterial3D_pbx5g")
size = Vector3(4, 16, 4)

[node name="Player" type="Node3D"]
script = ExtResource("1_uporl")

[node name="Slider" type="CharacterBody3D" parent="."]
transform = Transform3D(0.999998, 0, 0.00174533, 0, 1, 0, -0.00174533, 0, 0.999998, 0, 0, 0)
wall_min_slide_angle = 0.0

[node name="CollisionBox" type="CollisionShape3D" parent="Slider"]
shape = SubResource("BoxShape3D_c7cox")

[node name="Generic6DOFJoint3D" type="Generic6DOFJoint3D" parent="Slider"]
node_a = NodePath("..")
node_b = NodePath("../../PlayerBody")
linear_limit_x/enabled = false
linear_limit_y/enabled = false
linear_limit_z/enabled = false
angular_limit_x/enabled = false
angular_limit_y/enabled = false
angular_limit_z/enabled = false

[node name="PlayerBody" type="RigidBody3D" parent="." node_paths=PackedStringArray("input_controller")]
transform = Transform3D(0.999998, 0, 0.00174533, 0, 1, 0, -0.00174533, 0, 0.999998, 0, 0, 0)
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_fn3tq")
script = ExtResource("1_ijpxa")
input_controller = NodePath("../PlayerInputController")

[node name="Stabilizer" type="SpringArm3D" parent="PlayerBody"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -6, 0)
shape = SubResource("BoxShape3D_krclw")
spring_length = 2.0

[node name="Node3D" type="Node3D" parent="PlayerBody/Stabilizer"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="VRBase" parent="PlayerBody/Stabilizer/Node3D" instance=ExtResource("3_atccx")]

[node name="CollisionBox" type="CollisionShape3D" parent="PlayerBody"]
shape = SubResource("BoxShape3D_c7cox")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerBody"]
mesh = SubResource("BoxMesh_nnjws")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="PlayerBody"]
volume_db = -10.477

[node name="PlayerInputController" parent="." instance=ExtResource("3_sst4p")]

[node name="GrabController" type="Node3D" parent="."]
script = ExtResource("5_78jx3")
